Added new tables in database and Authorization window

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ігнорувати файли конфігурації з розширенням .config
 *.config
 
+# Ігнорувати файли з розширенням .jpg
+*.jpg
+
 # Ігнорувати все в папці packages
 packages/
 
