Added new features in MainWindow and ListOfWords and implementing additional interactions with the database

--- a/Vocabulary/Vocabulary.csproj
+++ b/Vocabulary/Vocabulary.csproj
@@ -205,10 +205,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="avatar_woman.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="avatar_man.jpg" />
+    <Resource Include="avatar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
