--- a/VocabularyWeb/VocabularyWeb.csproj
+++ b/VocabularyWeb/VocabularyWeb.csproj
@@ -1,9 +1,32 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="App.config" />
+    <Content Remove="Components\Pages\Counter.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Components\Pages\Counter.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="VocabularyLibrary">
+      <HintPath>..\VocabularyLibrary\bin\Debug\net8.0\VocabularyLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
